--- a/index.css
+++ b/index.css
@@ -52,17 +52,21 @@
   --color_enter_bg: #f2f1fb;
   --color_enter_bg_rgb: 242,241,251;
 }
-
+html {
+  font-size: 10.5px;
+  line-height: 10.5px;
+}
 #wrap {
   text-align: center;
 }
 #wrap-center {
   display: inline-block;
   width: 1280px;
-  background-color: pink;
 }
+
 #header {
   position: relative;
+  height: 64px;
   text-align: left;
 }
 #header-hamburger, #header-pay, #header-notice {
@@ -112,9 +116,101 @@
 #header-notice > div {
   background-position: -364px -27px;
 }
+
+#search > form {
+  display: inline-flex;
+  width: 706px;
+  height: 58px;
+  border: 1px solid #03c75a;
+  border-radius: 33px;
+  text-align: left;
+}
+#search > form:hover {
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.12);
+}
+#search-svg {
+  display: inline-block;
+  padding: 17px 17px 17px 27px;
+  margin-right: 12px;
+}
+#search-svg svg {
+  width: 24px;
+  height: 24px;
+  fill: #03c75a;
+}
+#search-input {
+  width: 480px;
+  height: 100%;
+  padding: 17px 0px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: var(--color_search);
+  line-height: 24px;
+  font-size: 2rem;
+  font-weight: bold;
+}
+#search-input::placeholder {
+  color: transparent;
+  font-weight: normal;
+}
+#search-input:focus::placeholder {
+  color: #e4e4e4;
+}
+#search-right {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+#search-keyboard, #search-recent, #search-button {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+#search-button {
+  padding: 17px 27px 16px 10px;
+}
+#search-keyboard::before {
+  display: block;
+  width: 24px;
+  height: 16px;
+  background-image: url(./assets/images/sp_main.png);
+  background-position: -50px -270px;
+  background-size: 422px 405px;
+  content: '';
+}
+#search-keyboard:hover:before {
+  display: block;
+  width: 24px;
+  height: 16px;
+  background-image: url(./assets/images/sp_main.png);
+  background-position: -270px -234px;
+  background-size: 422px 405px;
+  content: '';
+}
+#search-recent::before {
+  display: block;
+  width: 10px;
+  height: 6px;
+  background-image: url(./assets/images/sp_main.png);
+  background-position: -412px -352px;
+  background-size: 422px 405px;
+  content: '';
+}
+#search-button::before {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  background-image: url(./assets/images/sp_main.png);
+  background-position: -364px -132px;
+  background-size: 422px 405px;
+  content: '';
+}
+
 #main {
   height: 2000px;
 }
+
 .blind {
   /* 스크린 리더기를 위한 설정 / display: none; 하면 화면에 text가 안 보이지만 스크린 리더기도 읽지 못 한다. */
   position: absolute;
