nav list element 정렬

--- a/index.css
+++ b/index.css
@@ -218,6 +218,29 @@ html {
   content: '';
 }
 
+#nav > ul {
+  display: flex;
+  justify-content: center;
+  line-height: 20px;
+  font-size: 1.4rem;
+}
+#nav li {
+  width: 64px;
+  margin-left: 4px;
+}
+#nav li:nth-of-type(1) {
+  margin-left: 0;
+}
+#nav li:nth-of-type(2) {
+  
+}
+#nav a {
+  text-decoration: none;
+}
+#nav a:visited {
+  color: black;
+}
+
 #main {
   height: 2000px;
 }
