--- a/index.css
+++ b/index.css
@@ -216,6 +216,7 @@ html {
 #nav > ul {
   display: flex;
   justify-content: center;
+  margin-top: 12px;
   line-height: 20px;
   font-size: 1.4rem;
 }
@@ -233,23 +234,30 @@ html {
   color: black;
 }
 #nav a div {
+  position: relative;
   width: 44px;
   height: 44px;
   margin: 0 auto;
 }
-/* #nav a div::before {
+#nav a div::before {
   display: block;
+  position: absolute;
+  top: -3px;
+  left: -5px;
   width: 54px;
   height: 54px;
   background-image: url(./assets/images/sp_main.png);
   background-position: 0px -128px;
   background-size: 424px 409px;
   content: '';
-} */
+}
 #nav a div::after {
   display: inline-block;
+  position: relative;
+  z-index: 1;
   width: 44px;
   height: 44px;
+  margin: 2px;
   background-image: url(./assets/images/sp_main.png);
   background-size: 424px 409px;
   content: '';
@@ -283,6 +291,10 @@ html {
 }
 #nav li:nth-of-type(10) a div::after {
   background-position: -250px -135px;
+}
+#nav li a span {
+  display: inline-block;
+  margin-top: 7px;
 }
 
 #main {
