--- a/index.css
+++ b/index.css
@@ -327,7 +327,38 @@ nav .nav-text {
 }
 
 main {
+  display: flex;
   height: 2000px;
+  margin-top: 50px;
+}
+main section[id^=main] {
+  border-radius: 8px;
+  box-shadow: 0 0 0 1px #e3e5e8, 0 1px 2px 0 rgba(0,0,0,.04);
+}
+main aside[id$=ad] {
+  border-radius: 8px;
+  background-color: gray;
+}
+main #main-left-ad {
+  height: 130px;
+}
+main #main-right-ad {
+  height: 240px;
+  margin-top: 16px;
+}
+main #main-left {
+  width: 830px;
+  margin-right: 30px;
+}
+main #main-news-stand {
+  height: 426px;
+  margin-top: 16px;
+}
+main #main-right {
+  width: 420px;
+}
+main #main-login {
+  height: 164px;
 }
 
 .blind {
